<resources>
    <string name="app_name">Dictionary</string>
    <string name="add_word">Add word</string>
    <string name="word_list">Word List</string>
    <string name="train_word">Train word</string>
    <string name="open_book">Open book</string>
    <string name="save_word">Save</string>
    <string name="load_description">Load description</string>
    <string name="delete">Delete</string>
    <string name="text_default">Default</string>
    <string name="settings">Settings</string>
    <string name="text_word">Word:</string>
    <string name="text_russian_description">Russian description:</string>
    <string name="text_english_description">English description:</string>
    <string name="common">Common</string>
    <string name="language">Language</string>
    <string name="training">Training</string>
    <string name="train_font_size">Training font size %d</string>
    <string name="list_font_size">List font size %d</string>
    <string name="description1">English language</string>
    <string name="description2">Russian language</string>
    <string name="train_size">Choose number of descriptions %d</string>
    <string name="reader_settings">Reader</string>
    <string name="reader_font_size">Font size</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reader">Reader</string>
    <string name="text_add_words">Add words</string>

</resources>
