<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory-->
        <!--android:key="common_settings"-->
        <!--android:title="@string/common">-->
        <!--<ListPreference-->
            <!--android:entries="@array/language_list"-->
            <!--android:entryValues="@array/language_list_values"-->
            <!--android:key="locale"-->
            <!--android:title="@string/language"-->
            <!--android:defaultValue="default"/>-->
    <!--</PreferenceCategory>-->
    <PreferenceCategory
        android:key="training_settings"
        android:title="@string/training">
        <ListPreference
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_sizes"
            android:key="training_font_size"
            android:title="@string/train_font_size" />
        <ListPreference
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_sizes"
            android:key="list_font_size"
            android:title="@string/list_font_size" />
        <ListPreference
            android:entries="@array/descriptions"
            android:entryValues="@array/descriptions_values"
            android:defaultValue="first"
            android:key="description"
            android:title="@string/description1"/>
        <ListPreference
            android:entries="@array/num_desc"
            android:entryValues="@array/num_desc"
            android:defaultValue="4"
            android:key="num_descriptions"
            android:title="@string/train_size"/>
    </PreferenceCategory>
    <!--<PreferenceCategory-->
        <!--android:key="reader_settings"-->
        <!--android:title="@string/reader_settings">-->
        <!--<ListPreference-->
            <!--android:entries="@array/font_sizes"-->
            <!--android:entryValues="@array/font_sizes"-->
            <!--android:key="reader_font_size"-->
            <!--android:title="@string/reader_font_size" />-->
    <!--</PreferenceCategory>-->

</PreferenceScreen>