<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/btn_add_word_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/add_word"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_train_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_word_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/word_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_train_word" />

    <Button
        android:id="@+id/btn_train_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/train_word"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_word_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_word_start" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_word_list" />

    <!--<Button-->
    <!--android:id="@+id/btn_open_book"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="52dp"-->
    <!--android:layout_margin="5dp"-->
    <!--android:padding="10dp"-->
    <!--android:text="@string/open_book"-->
    <!--android:textSize="18sp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.5"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/btn_settings" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
