<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/text_word"
        app:layout_constraintBottom_toTopOf="@+id/word"
        app:layout_constraintStart_toStartOf="@+id/word" />

    <EditText
        android:id="@+id/word"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/text_field"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/TAG_new_word"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_alternative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word"></LinearLayout>

    <Button
        android:id="@+id/btn_paste"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttons_height"
        android:layout_marginTop="4dp"
        android:background="@drawable/button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@android:string/paste"
        android:textSize="@dimen/buttons_text"
        app:layout_constraintEnd_toStartOf="@+id/btn_load"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_alternative" />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttons_height"
        android:layout_marginTop="4dp"
        android:background="@drawable/button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/load_description"
        android:textSize="@dimen/buttons_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_paste"
        app:layout_constraintTop_toBottomOf="@+id/layout_alternative" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_load">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/text_english_description"
                app:layout_constraintBottom_toTopOf="@+id/text_description_first"
                app:layout_constraintStart_toStartOf="@+id/text_description_first" />

            <EditText
                android:id="@+id/text_description_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="2dp"
                android:autofillHints=""
                android:background="@drawable/text_field"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/text_russian_description"
                app:layout_constraintBottom_toTopOf="@+id/text_description_second"
                app:layout_constraintStart_toStartOf="@+id/text_description_second" />

            <EditText
                android:id="@+id/text_description_second"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="2dp"
                android:autofillHints=""
                android:background="@drawable/text_field"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description_first" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttons_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/delete"
        android:textSize="@dimen/buttons_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_word_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_add_word_start"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_add_word_start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/buttons_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/save_word"
        android:textSize="@dimen/buttons_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_add_word_edit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>
